Updated loyalty program include regex
